oracle/prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: prowlarr

spec:
  rules:
    - host: prowlarr.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  prowlarr
                port:
                  number: 9696
